user login done

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
           </div>
           <div class="col-sm-12 connecting-text" ng-show="user.cues == 'Yes'">
             Successfully connected with four other users!<br/>
-            Your username will be <b> {{user.name}} </b>.
+            Your username will be <b>"{{user.name}}"</b>.
           </div>
         </div>
 
