--- a/quiz.html
+++ b/quiz.html
@@ -76,9 +76,9 @@
           <div style="font-weight:bold;margin-bottom:1%;">Results of the group to this question (your answer is highlighted)..</div>
           <div class="row control-option-row" ng-repeat="option in controlFeedback | orderBy : 'order'" ng-style="" ng-class="{'my-answer': (option.order == 1)}">
             <div class="col-sm-2 option-box"> <img src ="./assets/icons/{{option.avatar}}" width="50"></div>
-            <div class="col-sm-9 feedback-explanation-box">
+            <div class="col-sm-10 feedback-explanation-box">
               <div class="col-sm-12" style="padding: 3px;"><b>Answer : </b>{{option.answer}}</div>
-              <div class="col-sm-12 explanation-area"><b>Explanation : </b>{{option.explanation}}</div>
+              <!-- <div class="col-sm-12 explanation-area"><b>Explanation : </b>{{option.explanation}}</div> -->
             </div>
           </div>
         </div>
@@ -90,10 +90,14 @@
         <div id="avatar_div" style="display:none;margin-left: 3%;margin-top:3%;">
           <div style="font-weight:bold;margin-bottom:1%;">Results of the group to this question (your answer is highlighted)..</div>
           <div class="row control-option-row" ng-repeat="option in feedback | orderBy : 'order'" ng-style="" ng-class="{'my-answer': (option.order == 1)}">
-            <div class="col-sm-2 option-box"> <img src ="./assets/{{option.avatar}}" width="50"></div>
-            <div class="col-sm-9 feedback-explanation-box">
+            <div class="col-sm-2 option-box">
+              <img src ="./assets/{{option.avatar}}" width="50">
+              <div style="font-weight: bold;" ng-if="(option.order == 1)">{{currentUsername}}</div>
+              <div style="font-weight: bold;" ng-if="(option.order != 1)">{{option.username}}</div>
+            </div>
+            <div class="col-sm-10 feedback-explanation-box">
               <div class="col-sm-12" style="padding: 3px;"><b>Answer : </b>{{option.answer}}</div>
-              <div class="col-sm-12 explanation-area"><b>Explanation : </b>{{option.explanation}}</div>
+              <!-- <div class="col-sm-12 explanation-area"><b>Explanation : </b>{{option.explanation}}</div> -->
             </div>
           </div>
         </div>
