--- a/quiz.html
+++ b/quiz.html
@@ -72,8 +72,8 @@
       </div>
 
       <div class="col-sm-6 chartdiv" id="chart-area">
-        <div id="chart_div" style="display:none;margin-left: 3%;margin-top:3%;">
-          <div style="font-weight:bold;margin-bottom:1%;">Results of the group to this question (your answer is highlighted)..</div>
+        <div id="chart_div" style="display:none;margin-left: 10%;margin-top:3%;">
+          <div style="font-weight:bold;margin-bottom:3%;">Results of the group to this question (your answer is highlighted)..</div>
           <div class="row control-option-row" ng-repeat="option in controlFeedback | orderBy : 'order'" ng-style="" ng-class="{'my-answer': (option.order == 1)}">
             <div class="col-sm-2 option-box"> <img src ="./assets/icons/{{option.avatar}}" width="50"></div>
             <div class="col-sm-10 feedback-explanation-box">
@@ -87,13 +87,13 @@
       </div>
 
       <div class="col-sm-6 avatardiv" id="avatar-area">
-        <div id="avatar_div" style="display:none;margin-left: 3%;margin-top:3%;">
-          <div style="font-weight:bold;margin-bottom:1%;">Results of the group to this question (your answer is highlighted)..</div>
+        <div id="avatar_div" style="display:none;margin-left: 10%;margin-top:3%;">
+          <div style="font-weight:bold;margin-bottom:3%;">Results of the group to this question (your answer is highlighted)..</div>
           <div class="row control-option-row" ng-repeat="option in feedback | orderBy : 'order'" ng-style="" ng-class="{'my-answer': (option.order == 1)}">
             <div class="col-sm-2 option-box">
               <img src ="./assets/{{option.avatar}}" width="50">
-              <div style="font-weight: bold;" ng-if="(option.order == 1)">{{currentUsername}}</div>
-              <div style="font-weight: bold;" ng-if="(option.order != 1)">{{option.username}}</div>
+              <div style="font-weight: bold;overflow-x: scroll;" ng-if="(option.order == 1)">{{currentUsername}}</div>
+              <div style="font-weight: bold;overflow-x: scroll;" ng-if="(option.order != 1)">{{option.username}}</div>
             </div>
             <div class="col-sm-10 feedback-explanation-box">
               <div class="col-sm-12" style="padding: 3px;font-size: 23px;">{{option.answer}}</div>
