--- a/quiz.html
+++ b/quiz.html
@@ -54,12 +54,12 @@
               </div>
               <div class="explanation-container">
                 <form>
-                  <textarea class="explanation-box" ng-model="myAnswer.explanation" placeholder="Why do you think this answer is the correct one? Enter your explanation here.." >
+                  <textarea class="explanation-box" ng-model="myAnswer.explanation" placeholder="Why do you think this answer is the correct one? Enter your explanation here..">
                     Enter your explanation here..
                   </textarea>
                   <div style="margin-top:20px;" class="button">
                     <button id="submit-button" style="display:none;" class="submit-button" ng-click="(count == 0) ? submitAnswer() : update()">Submit</button>
-                      <!-- <input id="submit-button" style="display:none;" class="submit-button" type="submit" ng-click="(count == 0) ? submitAnswer() : update()" /> -->
+                    <!-- <input id="submit-button" style="display:none;" class="submit-button" type="submit" ng-click="(count == 0) ? submitAnswer() : update()" /> -->
                   </div>
                 </form>
               </div>
@@ -75,7 +75,7 @@
         <div id="chart_div" style="display:none;margin-left: 10%;margin-top:3%;">
           <div style="font-weight:bold;margin-bottom:3%;">Results of the group to this question (your answer is highlighted)..</div>
           <div class="row control-option-row" ng-repeat="option in controlFeedback | orderBy : 'order'" ng-style="" ng-class="{'my-answer': (option.order == 1)}">
-            <div class="col-sm-2 option-box"> <img src ="./assets/icons/{{option.avatar}}" width="50"></div>
+            <div class="col-sm-2 option-box"> <img src="./assets/icons/{{option.avatar}}" width="50"></div>
             <div class="col-sm-10 feedback-explanation-box">
               <div class="col-sm-12" style="padding: 3px;font-size: 23px;">{{option.answer}}</div>
               <!-- <div class="col-sm-12 explanation-area"><b>Explanation : </b>{{option.explanation}}</div> -->
@@ -91,7 +91,7 @@
           <div style="font-weight:bold;margin-bottom:3%;">Results of the group to this question (your answer is highlighted)..</div>
           <div class="row control-option-row" ng-repeat="option in feedback | orderBy : 'order'" ng-style="" ng-class="{'my-answer': (option.order == 1)}">
             <div class="col-sm-2 option-box">
-              <img src ="./assets/{{option.avatar}}" width="50">
+              <img src="./assets/{{option.avatar}}" width="50">
               <div style="font-weight: bold;overflow-x: scroll;" ng-if="(option.order == 1)">{{currentUsername}}</div>
               <div style="font-weight: bold;overflow-x: scroll;" ng-if="(option.order != 1)">{{option.username}}</div>
             </div>
@@ -106,9 +106,9 @@
       </div>
 
       <div class="row">
-        <div id="change-section" class="col-sm-6" style="margin-bottom:50px;display:none;float:left;margin-left:25px;padding:20px;">
+        <div id="change-section" class="col-sm-12" style="margin-bottom:50px;display:none;margin-left:25%;padding:20px;width:50%;">
           <div id="descr">
-            <p class="change-text">Would you like to make any changes?</p>
+            <p class="change-text">Would you like to make changes to your answer, confidence or explanation?</p>
           </div>
           <div class="col-sm-6">
             <input type="button" value="Yes" class="yes-button" ng-click="yes()" />
@@ -117,8 +117,8 @@
             <input type="button" value="No, next question" class="no-button" ng-click="next()" />
           </div>
         </div>
-        <div class="col-sm-6"></div>
       </div>
+
       <div class="chatarea col-sm-6" id="chat-area" style="display:none;">
         <div class="minimize">
         </div>
