--- a/quiz.html
+++ b/quiz.html
@@ -77,10 +77,24 @@
         <div id="chart_div" style="display:none;margin-left: 10%;margin-top:3%;">
           <div style="font-weight:bold;margin-bottom:3%;">Results of the group to this question (your answer is highlighted)..</div>
           <div class="row control-option-row" ng-repeat="option in controlFeedback | orderBy : 'order'" ng-class="{'my-answer': (option.order == 1)}">
-            <div class="col-sm-2 option-box"> <img src="./assets/icons/{{option.avatar}}" width="50"></div>
+            <div class="col-sm-2 option-box"> <img src="./assets/icons/{{option.avatar}}" width="45"></div>
             <div class="col-sm-10 feedback-explanation-box">
               <div class="col-sm-12" style="padding: 3px;font-size: 23px;">{{option.answer}}</div>
               <!-- <div class="col-sm-12 explanation-area"><b>Explanation : </b>{{option.explanation}}</div> -->
+            </div>
+          </div>
+          <div id="change-section-ncnd" style="margin-bottom: 50px;padding: 20px;margin-top: 20px;border: solid red;display:none;">
+            <div class="row">
+              <div id="descr" class="col-sm-12">
+                <p class="change-text">Would you like to make changes to your answer, confidence or explanation?</p>
+              </div>
+
+              <div class="col-sm-6">
+                <input type="button" value="Yes" class="yes-button" ng-click="yes()" />
+              </div>
+              <div class="col-sm-6">
+                <input type="button" value="No, next question" class="no-button" ng-click="next()" />
+              </div>
             </div>
           </div>
         </div>
@@ -89,17 +103,33 @@
       </div>
 
       <div class="col-sm-6 avatardiv" id="avatar-area">
-        <div id="avatar_div" style="display:none;margin-left: 10%;margin-top:3%;">
-          <div style="font-weight:bold;margin-bottom:3%;">Results of the group to this question (your answer is highlighted)..</div>
+        <div id="avatar_div" style="display:none;margin-left: 10%;margin-top:2.5%;">
+          <div style="font-weight:bold;margin-bottom:1.5%;">Results of the group to this question (your answer is highlighted)..</div>
           <div class="row control-option-row" ng-repeat="option in feedback | orderBy : 'order'" ng-style="" ng-class="{'my-answer': (option.order == 1)}">
             <div class="col-sm-2 option-box">
-              <img src="./assets/{{option.avatar}}" width="50">
-              <div style="font-weight: bold;overflow-x: scroll;" ng-if="(option.order == 1)">{{currentUsername}}</div>
-              <div style="font-weight: bold;overflow-x: scroll;" ng-if="(option.order != 1)">{{option.username}}</div>
+              <img src="./assets/{{option.avatar}}" class="avatar-image">
+              <div class="username" ng-if="(option.order == 1)">{{currentUsername}}</div>
+              <div class="username" ng-if="(option.order != 1)">{{option.username}}</div>
             </div>
             <div class="col-sm-10 feedback-explanation-box">
               <div class="col-sm-12" style="padding: 3px;font-size: 23px;">{{option.answer}}</div>
               <!-- <div class="col-sm-12 explanation-area"><b>Explanation : </b>{{option.explanation}}</div> -->
+            </div>
+          </div>
+          <div class="row">
+            <div id="change-section-cnd" style="margin-bottom: 50px;padding: 20px;margin-top: 20px;border: solid red;display:none;">
+              <div class="row">
+                <div id="descr" class="col-sm-12">
+                  <p class="change-text">Would you like to make changes to your answer, confidence or explanation?</p>
+                </div>
+
+                <div class="col-sm-6">
+                  <input type="button" value="Yes" class="yes-button" ng-click="yes()" />
+                </div>
+                <div class="col-sm-6">
+                  <input type="button" value="No, next question" class="no-button" ng-click="next()" />
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -121,7 +151,7 @@
         </div>
       </div>
 
-      <div class="chatarea col-sm-6" id="chat-area" style="display:none;">
+      <div class="chatarea col-sm-6" id="chat-area" ng-show="user.discussion == 'Yes'">
         <div class="minimize">
         </div>
         <div class="textarea" id="text-area">
