Loader text changed

--- a/quiz.html
+++ b/quiz.html
@@ -99,7 +99,7 @@
           </div>
         </div>
         <div id="loader" style="display: none;" class="loader"></div>
-        <div id="loader-text" style="display: none;" class="loader-text">Loading results.. Please wait.</div>
+        <div id="loader-text" style="display: none;" class="loader-text">Getting answers of other participants.. Please wait.</div>
       </div>
 
       <div class="col-sm-6 avatardiv" id="avatar-area">
@@ -134,7 +134,7 @@
           </div>
         </div>
         <div id="loader" style="display: none;" class="loader"></div>
-        <div id="loader-text" style="display: none;" class="loader-text">Loading results.. Please wait.</div>
+        <div id="loader-text" style="display: none;" class="loader-text">Getting answers of other participants.. Please wait.</div>
       </div>
 
       <div class="row">
