--- a/quiz.html
+++ b/quiz.html
@@ -75,7 +75,7 @@
 
       <div class="col-sm-6 chartdiv" id="chart-area">
         <div id="chart_div" style="display:none;margin-left: 10%;margin-top:3%;">
-          <div style="font-weight:bold;margin-bottom:3%;">Results of the group to this question (your answer is highlighted)..</div>
+          <div style="font-weight:bold;margin-bottom:2%;">Results of the group to this question (your answer is highlighted)..</div>
           <div class="row control-option-row" ng-repeat="option in controlFeedback | orderBy : 'order'" ng-class="{'my-answer': (option.order == 1)}">
             <div class="col-sm-2 option-box"> <img src="./assets/icons/{{option.avatar}}" width="45"></div>
             <div class="col-sm-10 feedback-explanation-box">
@@ -151,7 +151,7 @@
         </div>
       </div>
 
-      <div class="chatarea col-sm-6" id="chat-area" ng-show="user.discussion == 'Yes'">
+      <div class="chatarea col-sm-6" id="chat-area" ng-show="discussion == 'Yes'">
         <div class="minimize">
         </div>
         <div class="textarea" id="text-area">
