--- a/quiz.html
+++ b/quiz.html
@@ -161,7 +161,7 @@
         </div>
         <div class="inputarea">
           <input type="text" ng-model="message" id="chat-text" placeholder="Type your message here.." class="text-box">
-          <button id="sendButton" ng-click="sendMessage()" style="width: 13%;">Send</button>
+          <button id="sendButton" ng-click="sendMessage()" class="send-button">Send</button>
         </div>
       </div>
     </div>
