--- a/quiz.html
+++ b/quiz.html
@@ -159,7 +159,7 @@
           </div>
         </div>
         <div class="inputarea">
-          <input type="text" ng-model="message" id="chat-text" placeholder="Type your message here.." class="text-box">
+          <input type="text" ng-model="message" id="chat-text" placeholder="Type your message here.." class="text-box" disabled>
           <button id="sendButton" ng-click="sendMessage()" class="send-button">Send</button>
         </div>
       </div>
