username issue fixed

--- a/quiz.html
+++ b/quiz.html
@@ -156,7 +156,7 @@
         <div class="textarea" id="text-area">
           <div ng-repeat="line in history" class="chat-messages" ng-class="{'last-line':$last, 'joined' : {{line.class == 'joined'}}, 'status' : {{line.class == 'status'}}}">
             <div class="row">
-              <div class="col-sm-1" style="margin-left:10px;">
+              <div class="col-sm-1" style="margin-left:10px;padding-right:0px;">
                 <img src="./assets/icons/{{line.avatar}}" width="40">
                 <b style="font-size: smaller;" ng-if='line.name'> {{line.name}}</b>
               </div>
