--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
             <table style="width:100%;">
 
               <tr class="row">
-                <td class="col-sm-6 right padding-adjust-labels"> Cues (to be selected by the researcher): <span style="color:red;">*</span></td>
+                <td class="col-sm-6 right padding-adjust-labels"> Cues (to be selected by the researcher):<span style="color:red;">*</span></td>
                 <td class="col-sm-6" style="padding-top: 10px;">
                   <select required ng-model="user.cues" class="input-text">
                     <option value="">None</option>
-                    <option value="Yes">Yes</option>
-                    <option value="No">No</option>
+                    <option value="avatar">Avatar</option>
+                    <option value="letter">Letter</option>
                   </select>
                 </td>
               </tr>
 
               <tr class="row">
-                <td class="col-sm-6 right padding-adjust-labels"> Discussion (to be selected by the researcher): <span style="color:red;">*</span></td>
+                <td class="col-sm-6 right padding-adjust-labels"> Discussion (to be selected by the researcher):<span style="color:red;">*</span></td>
                 <td class="col-sm-6" style="padding-top: 10px;">
                   <select required ng-model="user.discussion" class="input-text">
                     <option value="">None</option>
@@ -57,22 +57,33 @@
                 </td>
               </tr>
 
+              <tr class="row">
+                <td class="col-sm-6 right padding-adjust-labels"> Visibility (to be selected by the researcher):<span style="color:red;">*</span></td>
+                <td class="col-sm-6" style="padding-top: 10px;">
+                  <select required ng-model="user.visibility" class="input-text">
+                    <option value="">None</option>
+                    <option value="Yes">Yes</option>
+                    <option value="No">No</option>
+                  </select>
+                </td>
+              </tr>
+
               <!--For cues condition-->
-              <tr class="row" ng-show="user.cues == 'Yes'">
+              <!-- <tr class="row" ng-show="user.cues == 'Yes'">
                 <td class="col-sm-6 right padding-adjust-labels" style="padding-top:25px;"> Your name: <span style="color:red;">*</span></td>
                 <td class="col-sm-6" style="padding-top: 25px;"> <input type="text" placeholder=" e.g. Amy" ng-model="user.name" class="input-text" style="padding-left:5px;"></td>
-              </tr>
+              </tr> -->
 
               <tr class="row">
                 <td class="col-sm-6 right padding-adjust-labels"> Gender: <span style="color:red;">*</span> </td>
                 <td class="col-sm-6 padding-adjust-radio">
-                  <input id="female" type="radio" name="user.gender" ng-model="user.gender" value="female" class="radio-button" required> <label for="female" class="gender-label"> <span ng-show="user.cues == 'Yes'"> <img src="./assets/female.png" width="50" height="50"/></span> Female </label>
+                  <input id="female" type="radio" name="user.gender" ng-model="user.gender" value="female" class="radio-button" required> <label for="female" class="gender-label">Female</label>
                 </td>
               </tr>
               <tr class="row">
                 <td class="col-sm-6 right"></td>
                 <td class="col-sm-6">
-                  <input id="male" type="radio" name="user.gender" ng-model="user.gender" value="male" class="radio-button"> <label for="male" class="gender-label"> <span ng-show="user.cues == 'Yes'"> <img src="./assets/male.png" width="50" height="50"/></span> Male </label>
+                  <input id="male" type="radio" name="user.gender" ng-model="user.gender" value="male" class="radio-button"> <label for="male" class="gender-label">Male</label>
                 </td>
               </tr>
               <tr class="row">
@@ -93,31 +104,6 @@
                 <td class="col-sm-6 right padding-adjust-labels"> Age: <span style="color:red;">*</span></td>
                 <td class="col-sm-6" style="padding-top: 25px;"> <input type="number" placeholder=" e.g. 22" ng-model="user.age" class="input-text" style="padding-left:5px;"></td>
               </tr>
-
-            <!--<tr class="row">
-                <td class="col-sm-6 right padding-adjust-labels"> Age: <span style="color:red;">*</span></td>
-                <td class="col-sm-6 padding-adjust-radio"> <input type="radio" name="user.age" ng-model="user.age" value="1" class="radio-button" id="age-1" required> <label for="age-1" class="gender-label"> 18 - 24 </label></td>
-              </tr>
-              <tr class="row">
-                <td class="col-sm-6 right"></td>
-                <td class="col-sm-6"> <input type="radio" name="user.age" ng-model="user.age" value="2" class="radio-button" id="age-2"> <label for="age-2" class="gender-label"> 25 - 34 </label></td>
-              </tr>
-              <tr class="row">
-                <td class="col-sm-6 right"></td>
-                <td class="col-sm-6"> <input type="radio" name="user.age" ng-model="user.age" value="3" class="radio-button" id="age-3"> <label for="age-3" class="gender-label"> 35 - 44 </label></td>
-              </tr>
-              <tr class="row">
-                <td class="col-sm-6 right"></td>
-                <td class="col-sm-6"> <input type="radio" name="user.age" ng-model="user.age" value="4" class="radio-button" id="age-4"> <label for="age-4" class="gender-label"> 45 - 54 </label></td>
-              </tr>
-              <tr class="row">
-                <td class="col-sm-6 right"></td>
-                <td class="col-sm-6"> <input type="radio" name="user.age" ng-model="user.age" value="5" class="radio-button" id="age-5"> <label for="age-5" class="gender-label"> 55 - 64 </label></td>
-              </tr>
-              <tr class="row">
-                <td class="col-sm-6 right"></td>
-                <td class="col-sm-6"> <input type="radio" name="user.age" ng-model="user.age" value="6" class="radio-button" id="age-6"> <label for="age-6" class="gender-label"> 65 or older </label></td>
-              </tr>-->
 
               <tr class="row">
                 <td class="col-sm-6 right padding-adjust-labels"> Current Study: <span style="color:red;">*</span> </td>
@@ -197,6 +183,16 @@
           <div class="col-sm-10 instruction-text">Update your answer, confidence or explanation if needed and submit final answer.</div>
         </div>
 
+        <div class="row instruction" ng-show="user.visibility == 'No'">
+          <div class="col-sm-2"><img src="./assets/5.svg" width = "50"></div>
+          <div class="col-sm-10 instruction-text">Changes you make in the answers will <b>not</b> be visible to the rest of the group.</div>
+        </div>
+
+        <div class="row instruction" ng-show="user.visibility == 'Yes'">
+          <div class="col-sm-2"><img src="./assets/5.svg" width = "50"></div>
+          <div class="col-sm-10 instruction-text">View the updated answers of the group members.</div>
+        </div>
+
         <div class="row" id="connection-pending" style="display:none;">
           <div class="col-sm-8 connecting-text">
             Connecting you with other users...
@@ -207,13 +203,8 @@
         </div>
 
         <div class="row" id="connection-success" style="display:none;">
-          <div class="col-sm-12 connecting-text" ng-show="user.cues == 'No'">
-            Successfully connected with four other users : A, B, D & E. <br/>
-            You will be referred to as <img src ="./assets/icons/c.png" width="40"/>
-          </div>
-          <div class="col-sm-12 connecting-text" ng-show="user.cues == 'Yes'">
-            Successfully connected with four other users!<br/>
-            Your username will be <b>"{{user.name}}"</b>.
+          <div class="col-sm-12 connecting-text">
+            Successfully connected with four other users!
           </div>
         </div>
 
