--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
         <div class="row instruction" ng-show="user.visibility == 'No'">
           <div class="col-sm-2"><img src="./assets/5.svg" width = "50"></div>
-          <div class="col-sm-10 instruction-text">Changes you make in the answers will <b>not</b> be visible to the rest of the group.</div>
+          <div class="col-sm-10 instruction-text">Changes you make in the answers will <b>NOT</b> be visible to the rest of the group.</div>
         </div>
 
         <div class="row instruction" ng-show="user.visibility == 'Yes'">
