--- a/quiz.html
+++ b/quiz.html
@@ -55,9 +55,9 @@
               </div>
               <div class="explanation-container">
                 <form>
-                  <textarea class="explanation-box" ng-model="myAnswer.explanation" placeholder="Why do you think this answer is the correct one? Enter your explanation here..">
+                  <!-- <textarea class="explanation-box" ng-model="myAnswer.explanation" placeholder="Why do you think this answer is the correct one? Enter your explanation here..">
                     Enter your explanation here..
-                  </textarea>
+                  </textarea> -->
                   <div style="margin-top:20px;" class="button">
                     <button id="submit-button" style="display:none;" class="submit-button" ng-click="(count == 0) ? submitAnswer() : update()">Submit</button>
                     <!-- <input id="submit-button" style="display:none;" class="submit-button" type="submit" ng-click="(count == 0) ? submitAnswer() : update()" /> -->
@@ -76,7 +76,10 @@
         <div id="chart_div" style="display:none;margin-left: 10%;margin-top:3%;">
           <div style="font-weight:bold;margin-bottom:2%;">Results of the group to this question (your answer is highlighted)..</div>
           <div class="row control-option-row" ng-repeat="option in feedback | orderBy : 'order'" ng-class="{'my-answer': (option.order == 1)}">
-            <div class="col-sm-2 option-box"> <img src="./assets/icons/{{option.avatar}}" width="45"></div>
+            <div class="col-sm-2 option-box">
+              <img src="./assets/icons/new/{{option.avatar}}" width="45" ng-show='option.order != 1'>
+              <img src="{{myAvatar}}" width="45" ng-show='option.order == 1'>
+            </div>
             <div class="col-sm-10 feedback-explanation-box">
               <div class="col-sm-12" style="padding: 3px;font-size: 23px;">{{option.answer}}</div>
               <!-- <div class="col-sm-12 explanation-area"><b>Explanation : </b>{{option.explanation}}</div> -->
