--- a/quiz.html
+++ b/quiz.html
@@ -77,7 +77,8 @@
           <div style="font-weight:bold;margin-bottom:2%;">Results of the group to this question (your answer is highlighted)..</div>
           <div class="row control-option-row" ng-repeat="option in feedback | orderBy : 'order'" ng-class="{'my-answer': (option.order == 1)}">
             <div class="col-sm-2 option-box">
-              <img src="./assets/icons/new/{{option.avatar}}" width="45" ng-show='option.order != 1'>
+              <img src="./assets/icons/new/{{option.avatar}}" width="45" ng-show='option.order != 1 && cues == "letter"'>
+              <img src="./assets/icons/new/neutral.png" width="45" ng-show='option.order != 1 && cues == "avatar">
               <img src="{{myAvatar}}" width="45" ng-show='option.order == 1'>
             </div>
             <div class="col-sm-10 feedback-explanation-box">
