Added the avatars in the dicussion condition

--- a/quiz.html
+++ b/quiz.html
@@ -129,6 +129,7 @@
               <div class="col-sm-1" style="margin-left:20px;padding-right:0px;padding-left:0px;text-align:center;">
                 <img src="./assets/icons/new/{{line.avatar}}" width="45" ng-show='line.name != currentUsername && line.name != "QuizBot" && cues == "letter"' style="margin-top:7px;">
                 <img src="{{myAvatar}}" width="45" ng-show='line.name == currentUsername && cues == "letter"' style="margin-top:7px;">
+                <img src="./assets/icons/new/neutral.png" width="45" ng-show='line.name != "QuizBot" && cues == "avatar" && line.class != "joined"' style="margin-top:7px;">
 
                 <img src="./assets/icons/new/{{line.avatar}}" width="40" ng-show='line.name == "QuizBot"'>
                 <b style="font-size: smaller;" ng-if='line.name && line.name == "QuizBot"'> {{line.name}}</b>
