public private conditions

--- a/quiz.html
+++ b/quiz.html
@@ -59,7 +59,7 @@
                     Enter your explanation here..
                   </textarea> -->
                   <div style="margin-top:20px;" class="button">
-                    <button id="submit-button" style="display:none;" class="submit-button" ng-click="((count == 0) ? submitAnswer() : ((count == 1) ? update() : showUpdatedAnswers()))">Submit</button>
+                    <button id="submit-button" style="display:none;" class="submit-button" ng-click="((count == 0) ? submitAnswer() : update())">Submit</button>
                     <!-- <input id="submit-button" style="display:none;" class="submit-button" type="submit" ng-click="(count == 0) ? submitAnswer() : update()" /> -->
                   </div>
                 </form>
@@ -105,32 +105,19 @@
         <div id="loader" style="display: none;" class="loader"></div>
         <div id="loader-text" style="display: none;" class="loader-text">Getting answers of other participants.. Please wait.</div>
       </div>
-      <div class="row">
-        <div id="change-section" class="col-sm-12" style="display:none;" ng-class="{'change-area-no-discuss': (discussion == 'No'), 'change-area-discuss' : (discussion == 'Yes')}">
-          <div id="descr">
-            <p class="change-text">Would you like to make changes to your answer, confidence or explanation?</p>
-          </div>
-          <div class="col-sm-6">
-            <input type="button" value="Yes" class="yes-button" ng-click="yes()" />
-          </div>
-          <div class="col-sm-6">
-            <input type="button" value="No, next question" class="no-button" ng-click="next()" />
-          </div>
-        </div>
-      </div>
 
       <!-- Visibility public section -->
       <div class="col-sm-6 chartdiv" id="updated-answers-section">
         <div id="updated_div" style="display:none;margin-left: 10%;margin-top:3%;">
           <div style="font-weight:bold;margin-bottom:2%;">Final answers of the group to this question (your answer is highlighted)..</div>
-          <div class="row control-option-row" ng-repeat="option in updatedFeedback | orderBy : 'order'" ng-class="{'my-answer': (option.order == 1)}">
+          <div class="row control-option-row" ng-repeat="option in updatedFeedback | orderBy : 'order'" ng-class="{'my-answer': (option.order == 1), 'text-red' : (option.hasChanged == true)}">
             <div class="col-sm-2 option-box">
               <img src="./assets/icons/new/{{option.avatar}}" width="45" ng-show='option.order != 1 && cues == "letter"'>
               <img src="./assets/icons/new/neutral.png" width="45" ng-show='option.order != 1 && cues == "avatar"'>
               <img src="{{myAvatar}}" width="45" ng-show='option.order == 1'>
             </div>
             <div class="col-sm-10 feedback-explanation-box">
-              <div class="col-sm-12" style="padding: 3px;font-size: 23px;">{{option.answer}}</div>
+              <div class="col-sm-12" style="padding: 3px;font-size: 23px;">{{option.newAnswer}}</div>
               <!-- <div class="col-sm-12 explanation-area"><b>Explanation : </b>{{option.explanation}}</div> -->
             </div>
           </div>
@@ -145,6 +132,20 @@
         </div>
         <div id="loader-updated" style="display: none;" class="loader"></div>
         <div id="loader-text-updated" style="display: none;" class="loader-text">Getting the final answers of other participants.. Please wait.</div>
+      </div>
+
+      <div class="row">
+        <div id="change-section" class="col-sm-12" style="display:none;" ng-class="{'change-area-no-discuss': (discussion == 'No'), 'change-area-discuss' : (discussion == 'Yes')}">
+          <div id="descr">
+            <p class="change-text">Would you like to make changes to your answer, confidence or explanation?</p>
+          </div>
+          <div class="col-sm-6">
+            <input type="button" value="Yes" class="yes-button" ng-click="yes()" />
+          </div>
+          <div class="col-sm-6">
+            <input type="button" value="No, next question" class="no-button" ng-click="next()" />
+          </div>
+        </div>
       </div>
 
       <div class="chatarea col-sm-6" id="chat-area" ng-show="discussion == 'Yes'">
