--- a/quiz.html
+++ b/quiz.html
@@ -59,7 +59,7 @@
                     Enter your explanation here..
                   </textarea> -->
                   <div style="margin-top:20px;" class="button">
-                    <button id="submit-button" style="display:none;" class="submit-button" ng-click="((count == 0) ? submitAnswer() : update())">Submit</button>
+                    <button id="submit-button" style="display:none;" class="submit-button" ng-click="((count == 0) ? submitAnswer() : ((count == 1) ? update() : updateAndShowAnswers()))">Submit</button>
                     <!-- <input id="submit-button" style="display:none;" class="submit-button" type="submit" ng-click="(count == 0) ? submitAnswer() : update()" /> -->
                   </div>
                 </form>
