index file change

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               </tr>
 
               <tr class="row">
-                <td class="col-sm-6 right padding-adjust-labels"> Current Study: <span style="color:red;">*</span> </td>
+                <td class="col-sm-6 right padding-adjust-labels"> Current Level of Study: <span style="color:red;">*</span> </td>
                 <td class="col-sm-6 padding-adjust-radio"> <input type="radio" name="user.education" ng-model="user.education" value="bsc" class="radio-button" id="bsc" required> <label for="bsc" class="gender-label"> Undergraduate degree </label></td>
               </tr>
               <tr class="row">
