--- a/quiz.html
+++ b/quiz.html
@@ -28,7 +28,7 @@
             <div class="row">
               <p class="question-text"> <span> Q{{currentQIndex}}. </span>{{question.questionText}}</p>
               <div id="image-container" style="margin-bottom: 15px;">
-                <img ng-show='question.img' src="{{question.img}}" style="width:220px; height:125px;">
+                <img ng-if='question.img' src="{{question.img}}" style="width:220px; height:125px;">
               </div>
             </div>
 
@@ -77,9 +77,9 @@
           <div style="font-weight:bold;margin-bottom:2%;">Results of the group to this question (your answer is highlighted)..</div>
           <div class="row control-option-row" ng-repeat="option in feedback | orderBy : 'order'" ng-class="{'my-answer': (option.order == 1)}">
             <div class="col-sm-2 option-box">
-              <img src="./assets/icons/new/{{option.avatar}}" width="45" ng-show='option.order != 1 && cues == "letter"'>
-              <img src="./assets/icons/new/neutral.png" width="45" ng-show='option.order != 1 && cues == "avatar"'>
-              <img src="{{myAvatar}}" width="45" ng-show='option.order == 1'>
+              <img src="./assets/icons/new/{{option.avatar}}" width="45" ng-if='option.order != 1 && cues == "letter"'>
+              <img src="./assets/icons/new/neutral.png" width="45" ng-if='option.order != 1 && cues == "avatar"'>
+              <img src="{{myAvatar}}" width="45" ng-if='option.order == 1'>
             </div>
             <div class="col-sm-10 feedback-explanation-box">
               <div class="col-sm-12" style="padding: 3px;font-size: 23px;">{{option.answer}}</div>
@@ -112,9 +112,9 @@
           <div style="font-weight:bold;margin-bottom:2%;">Final answers of the group to this question (your answer is highlighted)..</div>
           <div class="row control-option-row" ng-repeat="option in updatedFeedback | orderBy : 'order'" ng-class="{'my-answer': (option.order == 1), 'text-red' : (option.hasChanged == true)}">
             <div class="col-sm-2 option-box">
-              <img src="./assets/icons/new/{{option.avatar}}" width="45" ng-show='option.order != 1 && cues == "letter"'>
-              <img src="./assets/icons/new/neutral.png" width="45" ng-show='option.order != 1 && cues == "avatar"'>
-              <img src="{{myAvatar}}" width="45" ng-show='option.order == 1'>
+              <img src="./assets/icons/new/{{option.avatar}}" width="45" ng-if='option.order != 1 && cues == "letter"'>
+              <img src="./assets/icons/new/neutral.png" width="45" ng-if='option.order != 1 && cues == "avatar"'>
+              <img src="{{myAvatar}}" width="45" ng-if='option.order == 1'>
             </div>
             <div class="col-sm-10 feedback-explanation-box">
               <div class="col-sm-12" style="padding: 3px;font-size: 23px;">{{option.newAnswer}}</div>
@@ -163,10 +163,10 @@
           <div ng-repeat="line in history" class="chat-messages" ng-class="{'last-line':$last, 'joined' : {{line.class == 'joined'}}, 'status' : {{line.class == 'status'}}}">
             <div class="row">
               <div class="col-sm-1" style="margin-left:20px;padding-right:0px;padding-left:0px;text-align:center;">
-                <img src="./assets/icons/new/{{line.avatar}}" width="45" ng-show='line.name != currentUsername && line.name != "QuizBot" && cues == "letter"' style="margin-top:7px;">
-                <img src="{{myAvatar}}" width="45" ng-show='line.name == currentUsername && cues == "letter"' style="margin-top:7px;">
-                <img src="./assets/icons/new/neutral.png" width="45" ng-show='line.name != "QuizBot" && cues == "avatar" && line.class != "joined"' style="margin-top:7px;">
-                <img src="./assets/icons/new/{{line.avatar}}" width="40" ng-show='line.name == "QuizBot"'>
+                <img src="./assets/icons/new/{{line.avatar}}" width="45" ng-if='line.name != currentUsername && line.name != "QuizBot" && cues == "letter"' style="margin-top:7px;">
+                <img src="{{myAvatar}}" width="45" ng-if='line.name == currentUsername && cues == "letter"' style="margin-top:7px;">
+                <img src="./assets/icons/new/neutral.png" width="45" ng-if='line.name != "QuizBot" && cues == "avatar" && line.class != "joined"' style="margin-top:7px;">
+                <img src="./assets/icons/new/{{line.avatar}}" width="40" ng-if='line.name == "QuizBot"'>
                 <b style="font-size: smaller;" ng-if='line.name && line.name == "QuizBot"'> {{line.name}}</b>
               </div>
               <div class="col-sm-10" ng-class="{'message-text' : {{line.class != 'joined' && line.class != 'status'}}, 'my-answer-text' : {{currentUsername == line.name}}}">
